[tool.poetry]
name = "scaler-peer-clustering"
version = "0.1.0"
description = ""
authors = ["Praveen Allam <praveenallam93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = '1.21.5'
pandas = '1.4.4'
seaborn = '0.11.2'
matplotlib = '3.5.2'
category_encoders = '2.6.3'
sklearn = '1.2.2'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
